Added pattern matching, type explanations, stop tamper buttons, et cetera

--- a/popups/tamper_body/popup.html
+++ b/popups/tamper_body/popup.html
@@ -116,7 +116,7 @@ and open the template in the editor.
 		<table class='paleBlueRows' id='bodytbl'><thead><tr><th>Name</th><th>Value</th></tr></thead><tbody id='bodybody'></tbody></table>
 		<br>
 		<div style='float:right;'>
-			<button id="ok" class="myButton">Ok</button><button id="cancel" class="myButton">Cancel Request</button>
+			<button id="stop" class="myButton">Stop Tamper</button><button id="cancel" class="myButton">Cancel Request</button><button id="ok" class="myButton">Ok</button>
 		</div>
 		<br>
 		<script src="popup.js"></script>
