--- a/popups/tamper_headers/popup.html
+++ b/popups/tamper_headers/popup.html
@@ -12,7 +12,7 @@ and open the template in the editor.
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<style>
 			body, *{ 
-				font-family: 'Roboto', sans-serif; n;
+				font-family: 'Roboto', sans-serif;
 			}
 			.myButton {
 				-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -115,6 +115,7 @@ and open the template in the editor.
 		<table class='paleBlueRows'><thead><tr><th>Name</th><th>Value</th></tr></thead><tbody id='headersbody'></tbody></table>
 		<br>
 		<div style='float:right;'>
+			<button id="stop" class="myButton">Stop Tamper</button>
 			<button id="ok" class="myButton">Ok</button>
 		</div>
 		<br>
