--- a/popups/confirm_tamper/popup.html
+++ b/popups/confirm_tamper/popup.html
@@ -12,8 +12,7 @@ and open the template in the editor.
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<style>
 			body{ 
-				font-family: 'Roboto', sans-serif; 
-				background: url(../../images/logo-tamper.png);
+				font-family: 'Roboto', sans-serif;
 				background-position: center;
 				background-repeat: no-repeat;
 				background-size: contain;
@@ -62,31 +61,231 @@ and open the template in the editor.
 				font-size:15px;
 				font-weight:bold;
 			}
+			table.paleBlueRows {
+				font-family: "Times New Roman", Times, serif;
+				border: 1px solid #FFFFFF;
+				text-align: center;
+				border-collapse: collapse;
+			}
+			table.paleBlueRows td, table.paleBlueRows th {
+				border: 1px solid #FFFFFF;
+				padding: 3px 2px;
+			}
+			table.paleBlueRows tbody td {
+				font-size: 13px;
+			}
+			table.paleBlueRows tr:nth-child(even) {
+				background: #D0E4F5;
+			}
+			table.paleBlueRows thead {
+				background: #0B6FA4;
+				border-bottom: 5px solid #FFFFFF;
+			}
+			table.paleBlueRows thead th {
+				font-size: 17px;
+				font-weight: bold;
+				color: #FFFFFF;
+				text-align: center;
+				border-left: 2px solid #FFFFFF;
+			}
+			table.paleBlueRows thead th:first-child {
+				border-left: none;
+			}
+
+			table.paleBlueRows tfoot {
+				font-size: 14px;
+				font-weight: bold;
+				color: #333333;
+				background: #D0E4F5;
+				border-top: 3px solid #444444;
+			}
+			table.paleBlueRows tfoot td {
+				font-size: 14px;
+			}
 		</style>
 	</head>
 	<body>
 		<center>
 			<p>Listen for types</p>
-			<label><input class='types' type="checkbox" value="beacon">&nbsp;beacon</label>
-			<label><input class='types' type="checkbox" value="csp_report">&nbsp;csp_report</label><br>
-			<label><input class='types' type="checkbox" value="font">&nbsp;font</label>
-			<label><input class='types' type="checkbox" value="image">&nbsp;image</label><br>
-			<label><input class='types' type="checkbox" value="imageset">&nbsp;imageset</label>
-			<label><input class='types' type="checkbox" value="main_frame" checked>&nbsp;main_frame</label><br>
-			<label><input class='types' type="checkbox" value="media">&nbsp;media</label>
-			<label><input class='types' type="checkbox" value="object">&nbsp;object</label><br>
-			<label><input class='types' type="checkbox" value="object_subrequest">&nbsp;object_subrequest</label>
-			<label><input class='types' type="checkbox" value="ping">&nbsp;ping</label><br>
-			<label><input class='types' type="checkbox" value="speculative">&nbsp;speculative</label>
-			<label><input class='types' type="checkbox" value="stylesheet">&nbsp;stylesheet</label><br>
-			<label><input class='types' type="checkbox" value="sub_frame">&nbsp;sub_frame</label>
-			<label><input class='types' type="checkbox" value="web_manifest">&nbsp;web_manifest</label><br>
-			<label><input class='types' type="checkbox" value="websocket">&nbsp;websocket</label>
-			<label><input class='types' type="checkbox" value="xbl">&nbsp;xbl</label><br>
-			<label><input class='types' type="checkbox" value="xml_dtd">&nbsp;xml_dtd</label>
-			<label><input class='types' type="checkbox" value="xmlhttprequest" checked>&nbsp;xmlhttprequest</label><br>
-			<label><input class='types' type="checkbox" value="xslt">&nbsp;xslt</label>
-			<label><input class='types' type="checkbox" value="other">&nbsp;other</label><br>
+			<table class='paleBlueRows'>
+				<thead>
+					<tr>
+						<th>Type</th><th>Description</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="beacon">&nbsp;beacon</label>
+						</td><td>
+							Requests sent through the Beacon API.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="csp_report">&nbsp;csp_report</label>
+						</td>
+						<td>
+							Requests sent to the report-uri given in the Content-Security-Policy header, when an attempt to violate the policy is detected.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="font">&nbsp;font</label>
+						</td>
+						<td>
+							Web fonts loaded for a @font-face CSS rule.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="image">&nbsp;image</label>
+						</td>
+						<td>
+							Resources loaded to be rendered as image, except for imageset on browsers that support that type.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="imageset">&nbsp;imageset</label>
+						</td>
+						<td>
+							Images loaded by a <code>&lt;picture></code> element or given in an <code>&lt;img></code> element's <code>srcset</code> attribute.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="main_frame" checked>&nbsp;main_frame</label>
+						</td>
+						<td>
+							Top-level documents loaded into a tab.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="media">&nbsp;media</label>
+						</td>
+						<td>
+							Resources loaded by a <code>&lt;video></code> or <code>&lt;audio></code> element.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="object">&nbsp;object</label>
+						</td>
+						<td>
+							Resources loaded by an <code>&lt;object></code> or <code>&lt;embed></code> element.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="object_subrequest">&nbsp;object_subrequest</label>
+						</td>
+						<td>
+							Requests sent by plugins.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="ping">&nbsp;ping</label>
+						</td>
+						<td>
+							Requests sent to the URL given in a hyperlink's ping attribute, when the hypelink is followed.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="script">&nbsp;script</label>
+						</td>
+						<td>
+							Code that is loaded to be executed by a <code>&lt;script></code> element or running in a Worker.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="speculative">&nbsp;speculative</label>
+						</td>
+						<td>
+							A TCP/TLS handshake made by the browser when it determines it will need the connection open soon.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="stylesheet">&nbsp;stylesheet</label><br>
+						</td>
+						<td>
+							CSS stylesheets loaded to describe the representation of a document.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="sub_frame">&nbsp;sub_frame</label>
+						</td>
+						<td>
+							Documents loaded into an <code>&lt;iframe></code> or <code>&lt;frame></code> element.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="web_manifest">&nbsp;web_manifest</label>
+						</td>
+						<td>
+							Web App Manifests loaded for websites that can be installed to the homescreen.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="websocket">&nbsp;websocket</label>
+						</td>
+						<td>
+							Requests initiating a connection to a server through the WebSocket API.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="xbl">&nbsp;xbl</label><br>
+						</td>
+						<td>
+							XBL bindings loaded to extend the behavior of elements in a document.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="xml_dtd">&nbsp;xml_dtd</label>
+						</td>
+						<td>
+							DTDs loaded for an XML document.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="xmlhttprequest" checked>&nbsp;xmlhttprequest</label>
+						</td>
+						<td>
+							Requests sent by an XMLHttpRequest object or through the Fetch API.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="xslt">&nbsp;xslt</label>
+						</td>
+						<td>
+							XSLT stylesheets loaded for transforming an XML document.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<label><input class='types' type="checkbox" value="other">&nbsp;other</label>
+						</td>
+						<td>
+							Resources that aren't covered by any other available type.
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<hr>
+			<label>Tamper with requests who's URL matches: <input value='(.*?)' id='matchregex'> </label>
+			<br>
 			<p>Start Tamper Data?</p>
 			<button id="y" class="myButton">Yes</button>&nbsp;<button id="n" class="myButton">No, Cancel</button>
 		</center>
