--- a/popups/confirm_tamper/popup.html
+++ b/popups/confirm_tamper/popup.html
@@ -10,6 +10,7 @@ and open the template in the editor.
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<center>
