--- a/popups/tamper_body/popup.html
+++ b/popups/tamper_body/popup.html
@@ -10,115 +10,59 @@ and open the template in the editor.
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<style>
-			body, *{ 
-				font-family: 'Roboto', sans-serif; n;
-			}
-			.myButton {
-				-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-				-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-				box-shadow:inset 0px 1px 0px 0px #ffffff;
-				background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
-				background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-				background:-webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-				background:-o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-				background:-ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-				background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
-				filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9',GradientType=0);
-				background-color:#f9f9f9;
-				-moz-border-radius:6px;
-				-webkit-border-radius:6px;
-				border-radius:6px;
-				border:1px solid #dcdcdc;
-				display:inline-block;
-				cursor:pointer;
-				color:#666666;
-				font-family:Arial;
-				font-size:15px;
-				font-weight:bold;
-				padding:6px 24px;
-				text-decoration:none;
-				text-shadow:0px 1px 0px #ffffff;
-			}
-			.myButton:hover {
-				background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9));
-				background:-moz-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-				background:-webkit-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-				background:-o-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-				background:-ms-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-				background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
-				filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9',GradientType=0);
-				background-color:#e9e9e9;
-			}
-			.myButton:active {
-				position:relative;
-				top:1px;
-			}
-			.toptable{ width:100%; }
-			h3{display: inline-block; }
-			table.paleBlueRows {
-				font-family: "Times New Roman", Times, serif;
-				border: 1px solid #FFFFFF;
-				width: 350px;
-				height: 200px;
-				text-align: center;
-				border-collapse: collapse;
-			}
-			table.paleBlueRows td, table.paleBlueRows th {
-				border: 1px solid #FFFFFF;
-				padding: 3px 2px;
-			}
-			table.paleBlueRows tbody td {
-				font-size: 13px;
-			}
-			table.paleBlueRows tr:nth-child(even) {
-				background: #D0E4F5;
-			}
-			table.paleBlueRows thead {
-				background: #0B6FA4;
-				border-bottom: 5px solid #FFFFFF;
-			}
-			table.paleBlueRows thead th {
-				font-size: 17px;
-				font-weight: bold;
-				color: #FFFFFF;
-				text-align: center;
-				border-left: 2px solid #FFFFFF;
-			}
-			table.paleBlueRows thead th:first-child {
-				border-left: none;
-			}
-
-			table.paleBlueRows tfoot {
-				font-size: 14px;
-				font-weight: bold;
-				color: #333333;
-				background: #D0E4F5;
-				border-top: 3px solid #444444;
-			}
-			table.paleBlueRows tfoot td {
-				font-size: 14px;
-			}
-			.block{ display: block; width:100%; }
-		</style>
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<!-- CSS -->
+		<link rel="stylesheet" href="./popup.css">
 	</head>
 	<body>
-		<h3>Details</h3>
-		<table class='toptable'>
-			<tbody>
-				<tr><td>URL</td><td><input class='block' id='url'></td></tr>
-				<tr><td>Method</td><td id='method'></td></tr>
-				<tr><td>Type</td><td id='type'></td></tr>
-			</tbody>
-		</table>
-		<h3>Request Body</h3>
-		<div id='norq'>This request has no request body.</div>
-		<table class='paleBlueRows' id='bodytbl'><thead><tr><th>Name</th><th>Value</th></tr></thead><tbody id='bodybody'></tbody></table>
-		<br>
-		<div style='float:right;'>
-			<button id="stop" class="myButton">Stop Tamper</button><button id="cancel" class="myButton">Cancel Request</button><button id="ok" class="myButton">Ok</button>
+
+		<div class="container">
+			<h3>Details</h3>
+
+			<table class="table table-striped">
+				<thead>
+					<tr>
+					<th scope="col">URL</th>
+					<th scope="col">Method</th>
+					<th scope="col">Type</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+	
+	
+			<h3>Request Body</h3>
+	
+			<div id='norq'>This request has no request body.</div>
+
+			<table class="table table-striped" id="bodytbl">
+				<thead>
+					<tr>
+					<th scope="col">Name</th>
+					<th scope="col">Value</th>
+					</tr>
+				</thead>
+				<tbody id="bodybody">
+				</tbody>
+			</table>
+
+			<br>
+
+			<div class="row buttons">
+				<div class="col-md-auto">
+					<button type="button" class="btn btn-light" id="stop">Stop Tamper</button>	
+				</div>
+				<div class="col-md-auto">
+					<button type="button" class="btn btn-light" id="cancel">Cancel Request</button>
+				</div>
+				<div class="col-md-auto">
+					<button type="button" class="btn btn-light" id="ok">Ok</button>
+				</div>
+			</div>
 		</div>
-		<br>
+		
 		<script src="popup.js"></script>
 	</body>
 </html>
