Add some style to tamper_headers with bootstrap

--- a/popups/tamper_body/popup.html
+++ b/popups/tamper_body/popup.html
@@ -23,9 +23,9 @@ and open the template in the editor.
 			<table class="table table-striped">
 				<thead>
 					<tr>
-					<th scope="col">URL</th>
-					<th scope="col">Method</th>
-					<th scope="col">Type</th>
+					<th scope="col" id="url">URL</th>
+					<th scope="col" id="method">Method</th>
+					<th scope="col" id="type">Type</th>
 					</tr>
 				</thead>
 				<tbody>
