Make headers more editable
Let the user edit also the default header names and add and remove
headers.

--- a/popups/tamper_headers/popup.html
+++ b/popups/tamper_headers/popup.html
@@ -24,6 +24,10 @@ and open the template in the editor.
 		<h3>Headers</h3>
 		<table class='paleBlueRows'><thead><tr><th>Name</th><th>Value</th></tr></thead><tbody id='headersbody'></tbody></table>
 		<br>
+    <div>
+      <button id="addHeader">Add Header</button>
+    </div>
+    <br>
 		<div class="buttons">
 			<button id="stop" class="myButton">Stop Tamper</button>
 			<button id="ok" class="myButton">Ok</button>
